# django-template

./: .pre-commit-config.yaml  Pipfile  README.md  main.py  makefile  pyproject.toml
.github/workflows/: main.yml
