[tool.black]
line-length = 79
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.flake8]
# Check that this is aligned with your other tools like Black
max-line-length = 120
max-complexity = 18
exclude = [".git", "*migrations*", ".tox", ".venv"]
# Use extend-ignore to add to already ignored checks which are anti-patterns like W503.
extend-ignore = ["E501", "W503", "F403", "C901", "B904"]


[tool.poetry.dependencies]
python = "^3.12"
django = "*"

[tool.poetry.group.dev.dependencies]
pylint = "*"
pylint-django = "*"
flake8 = "*"
pre-commit = "*"
skjold = "*"
flake8-pyproject = "*"
